added navigation bar to all pages with current page indicator.  Also added all the pages to the site that will be used.

--- a/references.html
+++ b/references.html
@@ -1,17 +1,17 @@
 <!doctype html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Hong Kong</title>
-	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="assets/css/style_main.css">
-	
+<meta charset="utf-8">
+<title>Site References</title>
+<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+<link href="assets/css/style_main.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
 	<div class="container">
 		<div class="navbar">
 			<ul class="nav_list">
-				<li class="nav_item"><a class="current" href="index.html">Home</a></li>
+				<li class="nav_item"><a href="index.html">Home</a></li>
 				<li class="nav_item"><a href="language.html">Language</a></li>
 				<li class="nav_item"><a href="business.html">Business</a></li>
 				<li class="nav_item"><a href="gallery.html">Gallery</a></li>
@@ -21,7 +21,7 @@
 				<li class="nav_item"><a href="about.html">About</a></li>
 				<li class="nav_item"><a href="contact.html">Contact</a></li>
 				<li class="nav_item"><a href="form.html">Form</a></li>
-				<li class="nav_item"><a href="references.html">References</a></li>
+				<li class="nav_item"><a class="current" href="references.html">References</a></li>
 			</ul>
 		</div>
 		<div class="left_side_logo">
