--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Hong Kong</title>
 	<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="assets/css/style_main.css">
-	
+	<link rel="stylesheet" type="text/css" href="assets/css/index-override.css">
 </head>
 <body>
 	<div class="container">
@@ -27,7 +27,19 @@
 		<div class="left_side_logo">
 			<h1 class="main_title">Hong Kong</h1>
 		</div>
-
 	</div>
+	<div class="container-big-box">
+	  <div class="grid-container">
+		<div class="main-text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sem sem, luctus id facilisis imperdiet, iaculis eget nisl. Integer tempus ipsum at purus suscipit, at varius tortor accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas imperdiet scelerisque quam, vel rutrum odio dictum nec. Nullam malesuada laoreet congue. Nunc pretium arcu a metus fringilla hendrerit. Morbi vulputate dolor sit amet massa hendrerit auctor. Curabitur at vestibulum leo, vel rutrum est. Maecenas consequat eu eros ut cursus. Sed lacus odio, accumsan pretium suscipit et, volutpat id diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla imperdiet ante eget dui cursus pretium. Duis semper rhoncus leo sed fringilla. Nam neque risus, ultrices vel sapien in, blandit aliquet ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
+		<div class="image-grid">
+				<img src="assets/images/IMG_3710.JPG" class="card-me">
+			</div>
+		<div class="main_text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse sem sem, luctus id facilisis imperdiet, iaculis eget nisl. Integer tempus ipsum at purus suscipit, at varius tortor accumsan. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Maecenas imperdiet scelerisque quam, vel rutrum odio dictum nec. Nullam malesuada laoreet congue. Nunc pretium arcu a metus fringilla hendrerit. Morbi vulputate dolor sit amet massa hendrerit auctor. Curabitur at vestibulum leo, vel rutrum est. Maecenas consequat eu eros ut cursus. Sed lacus odio, accumsan pretium suscipit et, volutpat id diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla imperdiet ante eget dui cursus pretium. Duis semper rhoncus leo sed fringilla. Nam neque risus, ultrices vel sapien in, blandit aliquet ligula. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</div>
+			<div class="image2">
+				<img src="assets/images/IMG_3690.JPG" class="card-me">
+			</div>
+			
+	  </div>
+</div>
 </body>
 </html>
