Added language page styling and removed unecessary pages

--- a/language.html
+++ b/language.html
@@ -5,6 +5,7 @@
 <title>Language</title>
 <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 <link href="assets/css/style_main.css" rel="stylesheet" type="text/css">
+<link href="assets/css/language-override.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -13,21 +14,32 @@
 			<ul class="nav_list">
 				<li class="nav_item"><a href="index.html">Home</a></li>
 				<li class="nav_item"><a class="current" href="language.html">Language</a></li>
-				<li class="nav_item"><a href="business.html">Business</a></li>
 				<li class="nav_item"><a href="gallery.html">Gallery</a></li>
 				<li class="nav_item"><a href="news.html">News</a></li>
 				<li class="nav_item"><a href="history.html">History</a></li>
 				<li class="nav_item"><a href="politics.html">Politics</a></li>
 				<li class="nav_item"><a href="about.html">About</a></li>
 				<li class="nav_item"><a href="contact.html">Contact</a></li>
-				<li class="nav_item"><a href="form.html">Form</a></li>
-				<li class="nav_item"><a href="references.html">References</a></li>
 			</ul>
 		</div>
 		<div class="left_side_logo">
 			<h1 class="main_title">Hong Kong</h1>
 		</div>
+		<div class="grid-container">
 
+		  <div class="text1 card-me">
+				<h3>English</h3>
+			</div>
+			<div class="text2 card-me">
+				<h3>Cantonese</h3>
+			</div>
+			<div class="image-chinese card-me">
+				<img src="assets/images/chinese.png" class="img-shrink">
+			</div>
+		  <div class="text3 card-me">
+				<h3>Mandarin</h3>
+			</div>
+	  </div>
 	</div>
 </body>
 </html>
